# python-project-83

./: .coverage  .gitignore  .ruff.toml  Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: my-check.yml
page_analyzer/: app.py  database.py  parser.py  sql_commands.py  validate.py
page_analyzer/templates/: index.html  layout.html
page_analyzer/templates/urls/: index.html  show.html
tests/: test_app.py
